service.yaml
apiVersion: v1
kind: Service
metadata:
  name: examen-practico-service
spec:
  type: ClusterIP
  selector:
    app: examen-practico-app
  ports:
  - port: 80
    targetPort: 80
